# gitops2-healthcare-intelligence-git-commit

./: CHANGELOG.md  CODEQL_V4_UPGRADE_SUCCESS.md  CODE_OF_CONDUCT.md  COMPLETION.md  CONTRIBUTING.md  LICENSE  README.md  RESOLUTION_COMPLETE.md  SECURITY.md  cleanup-repo.sh  pyproject.toml
.copilot/: README-VSCODE-INTEGRATION.md  VS_CODE_INTEGRATION.md  commit-message-prompt.txt
.copilot/examples/: examples-before-after.md
.github/: dependabot.yml
.github/workflows/: codeql-security-scan.yml  compliance-scan.yml  healthcare-compliance.yml  policy-check.yml  release-automation.yml  risk-adaptive-ci.yml  risk-adaptive-pipeline.yml
.husky/: commit-msg
docs/: DEPLOYMENT_GUIDE.md  EXECUTIVE_OVERVIEW.md  FILES_CREATED.md  IMPLEMENTATION_UPDATE.md  PUBLICATION_READINESS.md  QUICK_START.md  README.md  REGRESSION_REPORT_SCHEMA.md
policies/: enterprise-commit.rego  enterprise-commit_test.rego
policies/healthcare/: commit_metadata_required.rego  high_risk_dual_approval.rego  hipaa_phi_required.rego
scripts/: canary_rollout_sim.sh  intelligent-bisect.sh  run_regression_check.sh  validate-commit.sh
services/auth-service/: go.mod  main.go  main_test.go
services/payment-gateway/: Makefile  payment_test.go  sox_controls_test.go
tools/: ai_compliance_framework.py  healthcare_commit_generator.py  intelligent_bisect.py  synthetic_phi_generator.py  test_synthetic_phi_generator.py
tools/git_intel/: risk_scorer.py
